// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stylesheet > generates a dark light pair 1`] = `
"/* herb-highlight theme: onedark:github-light */

.herb-highlight {
  margin: 0;
}

.herb-highlight .herb-file-header {
  color: var(--herb-file-header, #11A8CD);
}

.herb-highlight .herb-code {
  margin: 0;
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.herb-highlight .herb-line[data-line]::before {
  content: attr(data-line);
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-dimmed {
  opacity: 0.6;
}

.herb-highlight .herb-line-focus[data-line]::before {
  color: var(--herb-line-number-focus, #11A8CD);
  font-weight: bold;
}

.herb-highlight .herb-token-whitespace { color: var(--herb-token-whitespace); }
.herb-highlight .herb-token-nbsp { color: var(--herb-token-nbsp); }
.herb-highlight .herb-token-newline { color: var(--herb-token-newline); }
.herb-highlight .herb-token-identifier { color: var(--herb-token-identifier); }
.herb-highlight .herb-ruby-keyword { color: var(--herb-ruby-keyword); }
.herb-highlight .herb-token-html-doctype { color: var(--herb-token-html-doctype); }
.herb-highlight .herb-token-html-tag-start { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-token-html-tag-start-close { color: var(--herb-token-html-tag-start-close); }
.herb-highlight .herb-token-html-tag-end { color: var(--herb-token-html-tag-end); }
.herb-highlight .herb-token-html-tag-self-close { color: var(--herb-token-html-tag-self-close); }
.herb-highlight .herb-token-html-comment-start { color: var(--herb-token-html-comment-start); }
.herb-highlight .herb-token-html-comment-end { color: var(--herb-token-html-comment-end); }
.herb-highlight .herb-token-erb-start { color: var(--herb-token-erb-start); }
.herb-highlight .herb-token-erb-content { color: var(--herb-token-erb-content); }
.herb-highlight .herb-token-erb-end { color: var(--herb-token-erb-end); }
.herb-highlight .herb-token-lt { color: var(--herb-token-lt); }
.herb-highlight .herb-token-slash { color: var(--herb-token-slash); }
.herb-highlight .herb-token-equals { color: var(--herb-token-equals); }
.herb-highlight .herb-token-quote { color: var(--herb-token-quote); }
.herb-highlight .herb-token-dash { color: var(--herb-token-dash); }
.herb-highlight .herb-token-underscore { color: var(--herb-token-underscore); }
.herb-highlight .herb-token-exclamation { color: var(--herb-token-exclamation); }
.herb-highlight .herb-token-semicolon { color: var(--herb-token-semicolon); }
.herb-highlight .herb-token-colon { color: var(--herb-token-colon); }
.herb-highlight .herb-token-percent { color: var(--herb-token-percent); }
.herb-highlight .herb-token-ampersand { color: var(--herb-token-ampersand); }
.herb-highlight .herb-token-character { color: var(--herb-token-character); }
.herb-highlight .herb-token-error { color: var(--herb-token-error); }
.herb-highlight .herb-token-eof { color: var(--herb-token-eof); }

.herb-highlight .herb-tag-name { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-attr-name { color: var(--herb-attr-name); }
.herb-highlight .herb-attr-value { color: var(--herb-attr-value); }
.herb-highlight .herb-comment { color: var(--herb-token-html-comment-start); }

.herb-highlight .herb-severity-label { font-weight: bold; }
.herb-highlight .herb-severity-label.herb-severity-error { color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-severity-label.herb-severity-warning { color: var(--herb-severity-warning, #F5F543); }
.herb-highlight .herb-severity-label.herb-severity-info { color: var(--herb-severity-info, #11A8CD); }
.herb-highlight .herb-severity-label.herb-severity-hint { color: var(--herb-severity-hint, #666666); }

.herb-highlight .herb-diagnostic-header {
  display: block;
  margin: 0 0 0.75em;
}

.herb-highlight .herb-diagnostic-message code {
  padding: 0 0.25em;
  border-radius: 3px;
  background-color: var(--herb-inline-code-bg, rgba(127, 127, 127, 0.18));
}

.herb-highlight .herb-diagnostic-code {
  opacity: 0.7;
}

.herb-highlight .herb-diagnostic-suffix {
  opacity: 0.7;
}

.herb-highlight .herb-annotation-message {
  display: block;
  user-select: none;
  opacity: 0.85;
}

.herb-highlight .herb-line-marked[data-line]::before {
  font-weight: bold;
}

.herb-highlight a {
  color: inherit;
}

.herb-highlight mark.herb-marker {
  color: inherit;
  background-color: transparent;
  text-decoration: underline wavy;
  text-decoration-skip-ink: none;
}

.herb-highlight mark.herb-marker-error { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration-color: var(--herb-severity-error, #F14C4C); }
.herb-highlight mark.herb-marker-warning { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration-color: var(--herb-severity-warning, #F5F543); }
.herb-highlight mark.herb-marker-info { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration-color: var(--herb-severity-info, #11A8CD); }
.herb-highlight mark.herb-marker-hint { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration-color: var(--herb-severity-hint, #666666); }

::highlight(herb-marker-error) { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration: underline wavy var(--herb-severity-error, #F14C4C); }
::highlight(herb-marker-warning) { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration: underline wavy var(--herb-severity-warning, #F5F543); }
::highlight(herb-marker-info) { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration: underline wavy var(--herb-severity-info, #11A8CD); }
::highlight(herb-marker-hint) { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration: underline wavy var(--herb-severity-hint, #666666); }

.herb-progress-rule {
  position: relative;
  margin: 1.5em 0;
  border: none;
  border-top: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
}

.herb-progress-rule::after {
  content: attr(data-herb-progress);
  position: absolute;
  top: -0.75em;
  right: 1em;
  padding: 0 0.5em;
  font-size: 0.8em;
  color: var(--herb-rule-label, #666666);
  background-color: var(--herb-rule-label-bg, Canvas);
}

.herb-highlight .herb-line[data-old-line]::before,
.herb-highlight .herb-line[data-new-line]::before {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-context[data-old-line]::before { content: attr(data-old-line); }
.herb-highlight .herb-diff-removed[data-old-line]::before { content: attr(data-old-line); color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-diff-added[data-new-line]::before { content: attr(data-new-line); color: var(--herb-diff-added-number, #0DBC79); }

.herb-highlight .herb-diff-context {
  opacity: 0.75;
}

.herb-highlight .herb-diff-added {
  background-color: var(--herb-diff-added-line-background, rgba(13, 188, 121, 0.12));
}

.herb-highlight .herb-diff-removed {
  background-color: var(--herb-diff-removed-line-background, rgba(241, 76, 76, 0.12));
}

.herb-highlight mark.herb-diff-inline-added {
  color: inherit;
  background-color: var(--herb-diff-added-background, rgba(13, 188, 121, 0.35));
}

.herb-highlight mark.herb-diff-inline-removed {
  color: inherit;
  background-color: var(--herb-diff-removed-background, rgba(241, 76, 76, 0.35));
}

.herb-highlight .herb-diff-hunk-separator::before {
  content: "⋮";
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1.5em;
}

.herb-highlight .herb-diff-column {
  margin: 0;
  white-space: pre;
  overflow-x: auto;
}

.herb-highlight .herb-diff-column-new {
  border-left: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  padding-left: 1.5em;
}

.herb-highlight .herb-diff-empty {
  display: block;
}

.herb-highlight.herb-messages-hover .herb-line-marked {
  position: relative;
}

.herb-highlight.herb-messages-hover .herb-annotation-message {
  display: none;
  position: absolute;
  left: 5ch;
  top: 100%;
  z-index: 1;
  width: max-content;
  max-width: 60ch;
  padding: 0.5em 0.75em;
  border: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  border-radius: 6px;
  background-color: var(--herb-tooltip-bg, Canvas);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
  white-space: normal;
}

.herb-highlight.herb-messages-hover .herb-line-marked:hover .herb-annotation-message,
.herb-highlight.herb-messages-hover .herb-line-marked:focus-within .herb-annotation-message {
  display: block;
}

.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-old-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-new-line]::before {
  content: none;
}

.herb-highlight .herb-line-number {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-marked > .herb-line-number {
  font-weight: bold;
}

.herb-highlight .herb-diff-removed > .herb-line-number {
  color: var(--herb-severity-error, #F14C4C);
}

.herb-highlight .herb-diff-added > .herb-line-number {
  color: var(--herb-diff-added-number, #0DBC79);
}

.herb-highlight {
  --herb-token-nbsp: #5C6370;
  --herb-token-identifier: #ABB2BF;
  --herb-ruby-keyword: #C678DD;
  --herb-token-html-doctype: #61AFEF;
  --herb-token-html-tag-start: #E06C75;
  --herb-token-html-tag-start-close: #E06C75;
  --herb-token-html-tag-end: #E06C75;
  --herb-token-html-tag-self-close: #E06C75;
  --herb-token-html-comment-start: #5C6370;
  --herb-token-html-comment-end: #5C6370;
  --herb-token-erb-start: #BE5046;
  --herb-token-erb-content: #E5C07B;
  --herb-token-erb-end: #BE5046;
  --herb-token-lt: #E06C75;
  --herb-token-slash: #E06C75;
  --herb-token-equals: #56B6C2;
  --herb-token-quote: #98C379;
  --herb-token-dash: #ABB2BF;
  --herb-token-underscore: #ABB2BF;
  --herb-token-exclamation: #C678DD;
  --herb-token-semicolon: #ABB2BF;
  --herb-token-colon: #ABB2BF;
  --herb-token-percent: #BE5046;
  --herb-token-ampersand: #D19A66;
  --herb-token-character: #ABB2BF;
  --herb-token-error: #E05252;
  --herb-diff-removed-line-background: #3A2224;
  --herb-diff-added-line-background: #1E3226;
  --herb-diff-removed-background: #6B2E31;
  --herb-diff-added-background: #2E5E3D;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}

@media (prefers-color-scheme: light) {
  .herb-highlight {
    --herb-token-nbsp: #6A737D;
    --herb-token-identifier: #24292E;
    --herb-ruby-keyword: #D73A49;
    --herb-token-html-doctype: #005CC5;
    --herb-token-html-tag-start: #22863A;
    --herb-token-html-tag-start-close: #22863A;
    --herb-token-html-tag-end: #22863A;
    --herb-token-html-tag-self-close: #22863A;
    --herb-token-html-comment-start: #6A737D;
    --herb-token-html-comment-end: #6A737D;
    --herb-token-erb-start: #E36209;
    --herb-token-erb-content: #6F42C1;
    --herb-token-erb-end: #E36209;
    --herb-token-lt: #22863A;
    --herb-token-slash: #22863A;
    --herb-token-equals: #D73A49;
    --herb-token-quote: #032F62;
    --herb-token-dash: #24292E;
    --herb-token-underscore: #24292E;
    --herb-token-exclamation: #D73A49;
    --herb-token-semicolon: #24292E;
    --herb-token-colon: #24292E;
    --herb-token-percent: #E36209;
    --herb-token-ampersand: #005CC5;
    --herb-token-character: #24292E;
    --herb-token-error: #CB2431;
    --herb-diff-removed-line-background: #FFEBE9;
    --herb-diff-added-line-background: #E6FFEC;
    --herb-diff-removed-background: #FFC9C7;
    --herb-diff-added-background: #ABF2BC;
    --herb-attr-name: #D19A66;
    --herb-attr-value: #98C379;
  }
}

.herb-highlight[data-herb-appearance="dark"] {
  --herb-token-nbsp: #5C6370;
  --herb-token-identifier: #ABB2BF;
  --herb-ruby-keyword: #C678DD;
  --herb-token-html-doctype: #61AFEF;
  --herb-token-html-tag-start: #E06C75;
  --herb-token-html-tag-start-close: #E06C75;
  --herb-token-html-tag-end: #E06C75;
  --herb-token-html-tag-self-close: #E06C75;
  --herb-token-html-comment-start: #5C6370;
  --herb-token-html-comment-end: #5C6370;
  --herb-token-erb-start: #BE5046;
  --herb-token-erb-content: #E5C07B;
  --herb-token-erb-end: #BE5046;
  --herb-token-lt: #E06C75;
  --herb-token-slash: #E06C75;
  --herb-token-equals: #56B6C2;
  --herb-token-quote: #98C379;
  --herb-token-dash: #ABB2BF;
  --herb-token-underscore: #ABB2BF;
  --herb-token-exclamation: #C678DD;
  --herb-token-semicolon: #ABB2BF;
  --herb-token-colon: #ABB2BF;
  --herb-token-percent: #BE5046;
  --herb-token-ampersand: #D19A66;
  --herb-token-character: #ABB2BF;
  --herb-token-error: #E05252;
  --herb-diff-removed-line-background: #3A2224;
  --herb-diff-added-line-background: #1E3226;
  --herb-diff-removed-background: #6B2E31;
  --herb-diff-added-background: #2E5E3D;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}

.herb-highlight[data-herb-appearance="light"] {
  --herb-token-nbsp: #6A737D;
  --herb-token-identifier: #24292E;
  --herb-ruby-keyword: #D73A49;
  --herb-token-html-doctype: #005CC5;
  --herb-token-html-tag-start: #22863A;
  --herb-token-html-tag-start-close: #22863A;
  --herb-token-html-tag-end: #22863A;
  --herb-token-html-tag-self-close: #22863A;
  --herb-token-html-comment-start: #6A737D;
  --herb-token-html-comment-end: #6A737D;
  --herb-token-erb-start: #E36209;
  --herb-token-erb-content: #6F42C1;
  --herb-token-erb-end: #E36209;
  --herb-token-lt: #22863A;
  --herb-token-slash: #22863A;
  --herb-token-equals: #D73A49;
  --herb-token-quote: #032F62;
  --herb-token-dash: #24292E;
  --herb-token-underscore: #24292E;
  --herb-token-exclamation: #D73A49;
  --herb-token-semicolon: #24292E;
  --herb-token-colon: #24292E;
  --herb-token-percent: #E36209;
  --herb-token-ampersand: #005CC5;
  --herb-token-character: #24292E;
  --herb-token-error: #CB2431;
  --herb-diff-removed-line-background: #FFEBE9;
  --herb-diff-added-line-background: #E6FFEC;
  --herb-diff-removed-background: #FFC9C7;
  --herb-diff-added-background: #ABF2BC;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}
"
`;

exports[`Stylesheet > generates custom properties for a single theme 1`] = `
"/* herb-highlight theme: onedark */

.herb-highlight {
  margin: 0;
}

.herb-highlight .herb-file-header {
  color: var(--herb-file-header, #11A8CD);
}

.herb-highlight .herb-code {
  margin: 0;
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.herb-highlight .herb-line[data-line]::before {
  content: attr(data-line);
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-dimmed {
  opacity: 0.6;
}

.herb-highlight .herb-line-focus[data-line]::before {
  color: var(--herb-line-number-focus, #11A8CD);
  font-weight: bold;
}

.herb-highlight .herb-token-whitespace { color: var(--herb-token-whitespace); }
.herb-highlight .herb-token-nbsp { color: var(--herb-token-nbsp); }
.herb-highlight .herb-token-newline { color: var(--herb-token-newline); }
.herb-highlight .herb-token-identifier { color: var(--herb-token-identifier); }
.herb-highlight .herb-ruby-keyword { color: var(--herb-ruby-keyword); }
.herb-highlight .herb-token-html-doctype { color: var(--herb-token-html-doctype); }
.herb-highlight .herb-token-html-tag-start { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-token-html-tag-start-close { color: var(--herb-token-html-tag-start-close); }
.herb-highlight .herb-token-html-tag-end { color: var(--herb-token-html-tag-end); }
.herb-highlight .herb-token-html-tag-self-close { color: var(--herb-token-html-tag-self-close); }
.herb-highlight .herb-token-html-comment-start { color: var(--herb-token-html-comment-start); }
.herb-highlight .herb-token-html-comment-end { color: var(--herb-token-html-comment-end); }
.herb-highlight .herb-token-erb-start { color: var(--herb-token-erb-start); }
.herb-highlight .herb-token-erb-content { color: var(--herb-token-erb-content); }
.herb-highlight .herb-token-erb-end { color: var(--herb-token-erb-end); }
.herb-highlight .herb-token-lt { color: var(--herb-token-lt); }
.herb-highlight .herb-token-slash { color: var(--herb-token-slash); }
.herb-highlight .herb-token-equals { color: var(--herb-token-equals); }
.herb-highlight .herb-token-quote { color: var(--herb-token-quote); }
.herb-highlight .herb-token-dash { color: var(--herb-token-dash); }
.herb-highlight .herb-token-underscore { color: var(--herb-token-underscore); }
.herb-highlight .herb-token-exclamation { color: var(--herb-token-exclamation); }
.herb-highlight .herb-token-semicolon { color: var(--herb-token-semicolon); }
.herb-highlight .herb-token-colon { color: var(--herb-token-colon); }
.herb-highlight .herb-token-percent { color: var(--herb-token-percent); }
.herb-highlight .herb-token-ampersand { color: var(--herb-token-ampersand); }
.herb-highlight .herb-token-character { color: var(--herb-token-character); }
.herb-highlight .herb-token-error { color: var(--herb-token-error); }
.herb-highlight .herb-token-eof { color: var(--herb-token-eof); }

.herb-highlight .herb-tag-name { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-attr-name { color: var(--herb-attr-name); }
.herb-highlight .herb-attr-value { color: var(--herb-attr-value); }
.herb-highlight .herb-comment { color: var(--herb-token-html-comment-start); }

.herb-highlight .herb-severity-label { font-weight: bold; }
.herb-highlight .herb-severity-label.herb-severity-error { color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-severity-label.herb-severity-warning { color: var(--herb-severity-warning, #F5F543); }
.herb-highlight .herb-severity-label.herb-severity-info { color: var(--herb-severity-info, #11A8CD); }
.herb-highlight .herb-severity-label.herb-severity-hint { color: var(--herb-severity-hint, #666666); }

.herb-highlight .herb-diagnostic-header {
  display: block;
  margin: 0 0 0.75em;
}

.herb-highlight .herb-diagnostic-message code {
  padding: 0 0.25em;
  border-radius: 3px;
  background-color: var(--herb-inline-code-bg, rgba(127, 127, 127, 0.18));
}

.herb-highlight .herb-diagnostic-code {
  opacity: 0.7;
}

.herb-highlight .herb-diagnostic-suffix {
  opacity: 0.7;
}

.herb-highlight .herb-annotation-message {
  display: block;
  user-select: none;
  opacity: 0.85;
}

.herb-highlight .herb-line-marked[data-line]::before {
  font-weight: bold;
}

.herb-highlight a {
  color: inherit;
}

.herb-highlight mark.herb-marker {
  color: inherit;
  background-color: transparent;
  text-decoration: underline wavy;
  text-decoration-skip-ink: none;
}

.herb-highlight mark.herb-marker-error { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration-color: var(--herb-severity-error, #F14C4C); }
.herb-highlight mark.herb-marker-warning { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration-color: var(--herb-severity-warning, #F5F543); }
.herb-highlight mark.herb-marker-info { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration-color: var(--herb-severity-info, #11A8CD); }
.herb-highlight mark.herb-marker-hint { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration-color: var(--herb-severity-hint, #666666); }

::highlight(herb-marker-error) { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration: underline wavy var(--herb-severity-error, #F14C4C); }
::highlight(herb-marker-warning) { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration: underline wavy var(--herb-severity-warning, #F5F543); }
::highlight(herb-marker-info) { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration: underline wavy var(--herb-severity-info, #11A8CD); }
::highlight(herb-marker-hint) { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration: underline wavy var(--herb-severity-hint, #666666); }

.herb-progress-rule {
  position: relative;
  margin: 1.5em 0;
  border: none;
  border-top: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
}

.herb-progress-rule::after {
  content: attr(data-herb-progress);
  position: absolute;
  top: -0.75em;
  right: 1em;
  padding: 0 0.5em;
  font-size: 0.8em;
  color: var(--herb-rule-label, #666666);
  background-color: var(--herb-rule-label-bg, Canvas);
}

.herb-highlight .herb-line[data-old-line]::before,
.herb-highlight .herb-line[data-new-line]::before {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-context[data-old-line]::before { content: attr(data-old-line); }
.herb-highlight .herb-diff-removed[data-old-line]::before { content: attr(data-old-line); color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-diff-added[data-new-line]::before { content: attr(data-new-line); color: var(--herb-diff-added-number, #0DBC79); }

.herb-highlight .herb-diff-context {
  opacity: 0.75;
}

.herb-highlight .herb-diff-added {
  background-color: var(--herb-diff-added-line-background, rgba(13, 188, 121, 0.12));
}

.herb-highlight .herb-diff-removed {
  background-color: var(--herb-diff-removed-line-background, rgba(241, 76, 76, 0.12));
}

.herb-highlight mark.herb-diff-inline-added {
  color: inherit;
  background-color: var(--herb-diff-added-background, rgba(13, 188, 121, 0.35));
}

.herb-highlight mark.herb-diff-inline-removed {
  color: inherit;
  background-color: var(--herb-diff-removed-background, rgba(241, 76, 76, 0.35));
}

.herb-highlight .herb-diff-hunk-separator::before {
  content: "⋮";
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1.5em;
}

.herb-highlight .herb-diff-column {
  margin: 0;
  white-space: pre;
  overflow-x: auto;
}

.herb-highlight .herb-diff-column-new {
  border-left: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  padding-left: 1.5em;
}

.herb-highlight .herb-diff-empty {
  display: block;
}

.herb-highlight.herb-messages-hover .herb-line-marked {
  position: relative;
}

.herb-highlight.herb-messages-hover .herb-annotation-message {
  display: none;
  position: absolute;
  left: 5ch;
  top: 100%;
  z-index: 1;
  width: max-content;
  max-width: 60ch;
  padding: 0.5em 0.75em;
  border: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  border-radius: 6px;
  background-color: var(--herb-tooltip-bg, Canvas);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
  white-space: normal;
}

.herb-highlight.herb-messages-hover .herb-line-marked:hover .herb-annotation-message,
.herb-highlight.herb-messages-hover .herb-line-marked:focus-within .herb-annotation-message {
  display: block;
}

.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-old-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-new-line]::before {
  content: none;
}

.herb-highlight .herb-line-number {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-marked > .herb-line-number {
  font-weight: bold;
}

.herb-highlight .herb-diff-removed > .herb-line-number {
  color: var(--herb-severity-error, #F14C4C);
}

.herb-highlight .herb-diff-added > .herb-line-number {
  color: var(--herb-diff-added-number, #0DBC79);
}

.herb-highlight {
  --herb-token-nbsp: #5C6370;
  --herb-token-identifier: #ABB2BF;
  --herb-ruby-keyword: #C678DD;
  --herb-token-html-doctype: #61AFEF;
  --herb-token-html-tag-start: #E06C75;
  --herb-token-html-tag-start-close: #E06C75;
  --herb-token-html-tag-end: #E06C75;
  --herb-token-html-tag-self-close: #E06C75;
  --herb-token-html-comment-start: #5C6370;
  --herb-token-html-comment-end: #5C6370;
  --herb-token-erb-start: #BE5046;
  --herb-token-erb-content: #E5C07B;
  --herb-token-erb-end: #BE5046;
  --herb-token-lt: #E06C75;
  --herb-token-slash: #E06C75;
  --herb-token-equals: #56B6C2;
  --herb-token-quote: #98C379;
  --herb-token-dash: #ABB2BF;
  --herb-token-underscore: #ABB2BF;
  --herb-token-exclamation: #C678DD;
  --herb-token-semicolon: #ABB2BF;
  --herb-token-colon: #ABB2BF;
  --herb-token-percent: #BE5046;
  --herb-token-ampersand: #D19A66;
  --herb-token-character: #ABB2BF;
  --herb-token-error: #E05252;
  --herb-diff-removed-line-background: #3A2224;
  --herb-diff-added-line-background: #1E3226;
  --herb-diff-removed-background: #6B2E31;
  --herb-diff-added-background: #2E5E3D;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}
"
`;

exports[`Stylesheet > maps named colors to hex 1`] = `
"/* herb-highlight theme: simple */

.herb-highlight {
  margin: 0;
}

.herb-highlight .herb-file-header {
  color: var(--herb-file-header, #11A8CD);
}

.herb-highlight .herb-code {
  margin: 0;
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.herb-highlight .herb-line[data-line]::before {
  content: attr(data-line);
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-dimmed {
  opacity: 0.6;
}

.herb-highlight .herb-line-focus[data-line]::before {
  color: var(--herb-line-number-focus, #11A8CD);
  font-weight: bold;
}

.herb-highlight .herb-token-whitespace { color: var(--herb-token-whitespace); }
.herb-highlight .herb-token-nbsp { color: var(--herb-token-nbsp); }
.herb-highlight .herb-token-newline { color: var(--herb-token-newline); }
.herb-highlight .herb-token-identifier { color: var(--herb-token-identifier); }
.herb-highlight .herb-ruby-keyword { color: var(--herb-ruby-keyword); }
.herb-highlight .herb-token-html-doctype { color: var(--herb-token-html-doctype); }
.herb-highlight .herb-token-html-tag-start { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-token-html-tag-start-close { color: var(--herb-token-html-tag-start-close); }
.herb-highlight .herb-token-html-tag-end { color: var(--herb-token-html-tag-end); }
.herb-highlight .herb-token-html-tag-self-close { color: var(--herb-token-html-tag-self-close); }
.herb-highlight .herb-token-html-comment-start { color: var(--herb-token-html-comment-start); }
.herb-highlight .herb-token-html-comment-end { color: var(--herb-token-html-comment-end); }
.herb-highlight .herb-token-erb-start { color: var(--herb-token-erb-start); }
.herb-highlight .herb-token-erb-content { color: var(--herb-token-erb-content); }
.herb-highlight .herb-token-erb-end { color: var(--herb-token-erb-end); }
.herb-highlight .herb-token-lt { color: var(--herb-token-lt); }
.herb-highlight .herb-token-slash { color: var(--herb-token-slash); }
.herb-highlight .herb-token-equals { color: var(--herb-token-equals); }
.herb-highlight .herb-token-quote { color: var(--herb-token-quote); }
.herb-highlight .herb-token-dash { color: var(--herb-token-dash); }
.herb-highlight .herb-token-underscore { color: var(--herb-token-underscore); }
.herb-highlight .herb-token-exclamation { color: var(--herb-token-exclamation); }
.herb-highlight .herb-token-semicolon { color: var(--herb-token-semicolon); }
.herb-highlight .herb-token-colon { color: var(--herb-token-colon); }
.herb-highlight .herb-token-percent { color: var(--herb-token-percent); }
.herb-highlight .herb-token-ampersand { color: var(--herb-token-ampersand); }
.herb-highlight .herb-token-character { color: var(--herb-token-character); }
.herb-highlight .herb-token-error { color: var(--herb-token-error); }
.herb-highlight .herb-token-eof { color: var(--herb-token-eof); }

.herb-highlight .herb-tag-name { color: var(--herb-token-html-tag-start); }
.herb-highlight .herb-attr-name { color: var(--herb-attr-name); }
.herb-highlight .herb-attr-value { color: var(--herb-attr-value); }
.herb-highlight .herb-comment { color: var(--herb-token-html-comment-start); }

.herb-highlight .herb-severity-label { font-weight: bold; }
.herb-highlight .herb-severity-label.herb-severity-error { color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-severity-label.herb-severity-warning { color: var(--herb-severity-warning, #F5F543); }
.herb-highlight .herb-severity-label.herb-severity-info { color: var(--herb-severity-info, #11A8CD); }
.herb-highlight .herb-severity-label.herb-severity-hint { color: var(--herb-severity-hint, #666666); }

.herb-highlight .herb-diagnostic-header {
  display: block;
  margin: 0 0 0.75em;
}

.herb-highlight .herb-diagnostic-message code {
  padding: 0 0.25em;
  border-radius: 3px;
  background-color: var(--herb-inline-code-bg, rgba(127, 127, 127, 0.18));
}

.herb-highlight .herb-diagnostic-code {
  opacity: 0.7;
}

.herb-highlight .herb-diagnostic-suffix {
  opacity: 0.7;
}

.herb-highlight .herb-annotation-message {
  display: block;
  user-select: none;
  opacity: 0.85;
}

.herb-highlight .herb-line-marked[data-line]::before {
  font-weight: bold;
}

.herb-highlight a {
  color: inherit;
}

.herb-highlight mark.herb-marker {
  color: inherit;
  background-color: transparent;
  text-decoration: underline wavy;
  text-decoration-skip-ink: none;
}

.herb-highlight mark.herb-marker-error { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration-color: var(--herb-severity-error, #F14C4C); }
.herb-highlight mark.herb-marker-warning { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration-color: var(--herb-severity-warning, #F5F543); }
.herb-highlight mark.herb-marker-info { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration-color: var(--herb-severity-info, #11A8CD); }
.herb-highlight mark.herb-marker-hint { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration-color: var(--herb-severity-hint, #666666); }

::highlight(herb-marker-error) { background-color: var(--herb-marker-error-bg, rgba(241, 76, 76, 0.15)); text-decoration: underline wavy var(--herb-severity-error, #F14C4C); }
::highlight(herb-marker-warning) { background-color: var(--herb-marker-warning-bg, rgba(245, 245, 67, 0.15)); text-decoration: underline wavy var(--herb-severity-warning, #F5F543); }
::highlight(herb-marker-info) { background-color: var(--herb-marker-info-bg, rgba(17, 168, 205, 0.15)); text-decoration: underline wavy var(--herb-severity-info, #11A8CD); }
::highlight(herb-marker-hint) { background-color: var(--herb-marker-hint-bg, rgba(102, 102, 102, 0.15)); text-decoration: underline wavy var(--herb-severity-hint, #666666); }

.herb-progress-rule {
  position: relative;
  margin: 1.5em 0;
  border: none;
  border-top: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
}

.herb-progress-rule::after {
  content: attr(data-herb-progress);
  position: absolute;
  top: -0.75em;
  right: 1em;
  padding: 0 0.5em;
  font-size: 0.8em;
  color: var(--herb-rule-label, #666666);
  background-color: var(--herb-rule-label-bg, Canvas);
}

.herb-highlight .herb-line[data-old-line]::before,
.herb-highlight .herb-line[data-new-line]::before {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-context[data-old-line]::before { content: attr(data-old-line); }
.herb-highlight .herb-diff-removed[data-old-line]::before { content: attr(data-old-line); color: var(--herb-severity-error, #F14C4C); }
.herb-highlight .herb-diff-added[data-new-line]::before { content: attr(data-new-line); color: var(--herb-diff-added-number, #0DBC79); }

.herb-highlight .herb-diff-context {
  opacity: 0.75;
}

.herb-highlight .herb-diff-added {
  background-color: var(--herb-diff-added-line-background, rgba(13, 188, 121, 0.12));
}

.herb-highlight .herb-diff-removed {
  background-color: var(--herb-diff-removed-line-background, rgba(241, 76, 76, 0.12));
}

.herb-highlight mark.herb-diff-inline-added {
  color: inherit;
  background-color: var(--herb-diff-added-background, rgba(13, 188, 121, 0.35));
}

.herb-highlight mark.herb-diff-inline-removed {
  color: inherit;
  background-color: var(--herb-diff-removed-background, rgba(241, 76, 76, 0.35));
}

.herb-highlight .herb-diff-hunk-separator::before {
  content: "⋮";
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-diff-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1.5em;
}

.herb-highlight .herb-diff-column {
  margin: 0;
  white-space: pre;
  overflow-x: auto;
}

.herb-highlight .herb-diff-column-new {
  border-left: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  padding-left: 1.5em;
}

.herb-highlight .herb-diff-empty {
  display: block;
}

.herb-highlight.herb-messages-hover .herb-line-marked {
  position: relative;
}

.herb-highlight.herb-messages-hover .herb-annotation-message {
  display: none;
  position: absolute;
  left: 5ch;
  top: 100%;
  z-index: 1;
  width: max-content;
  max-width: 60ch;
  padding: 0.5em 0.75em;
  border: 1px solid var(--herb-rule, rgba(127, 127, 127, 0.4));
  border-radius: 6px;
  background-color: var(--herb-tooltip-bg, Canvas);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
  white-space: normal;
}

.herb-highlight.herb-messages-hover .herb-line-marked:hover .herb-annotation-message,
.herb-highlight.herb-messages-hover .herb-line-marked:focus-within .herb-annotation-message {
  display: block;
}

.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-old-line]::before,
.herb-highlight[data-herb-line-numbers="element"] .herb-line[data-new-line]::before {
  content: none;
}

.herb-highlight .herb-line-number {
  display: inline-block;
  width: 3ch;
  margin-right: 1ch;
  text-align: right;
  color: var(--herb-line-number, #666666);
  user-select: none;
}

.herb-highlight .herb-line-marked > .herb-line-number {
  font-weight: bold;
}

.herb-highlight .herb-diff-removed > .herb-line-number {
  color: var(--herb-severity-error, #F14C4C);
}

.herb-highlight .herb-diff-added > .herb-line-number {
  color: var(--herb-diff-added-number, #0DBC79);
}

.herb-highlight {
  --herb-token-nbsp: #666666;
  --herb-token-identifier: #E5E5E5;
  --herb-ruby-keyword: #BC3FBC;
  --herb-token-html-doctype: #2472C8;
  --herb-token-html-tag-start: #CD3131;
  --herb-token-html-tag-start-close: #CD3131;
  --herb-token-html-tag-end: #CD3131;
  --herb-token-html-tag-self-close: #CD3131;
  --herb-token-html-comment-start: #666666;
  --herb-token-html-comment-end: #666666;
  --herb-token-erb-start: #E5E510;
  --herb-token-erb-content: #BC3FBC;
  --herb-token-erb-end: #E5E510;
  --herb-token-lt: #CD3131;
  --herb-token-slash: #CD3131;
  --herb-token-equals: #2472C8;
  --herb-token-quote: #0DBC79;
  --herb-token-dash: #E5E5E5;
  --herb-token-underscore: #E5E5E5;
  --herb-token-exclamation: #BC3FBC;
  --herb-token-semicolon: #E5E5E5;
  --herb-token-colon: #E5E5E5;
  --herb-token-percent: #E5E510;
  --herb-token-ampersand: #E5E510;
  --herb-token-character: #E5E5E5;
  --herb-token-error: #CD3131;
  --herb-attr-name: #D19A66;
  --herb-attr-value: #98C379;
}
"
`;
